# led-matrix

./: .gitignore  CMakeLists.txt  README.md  makefile
build-scripts/: build-debug.sh  build-dev.sh  build.sh  clean.sh
include/common/canvas/: better_canvas.hpp  debug_canvas.hpp  icanvas.hpp  text_drawer.hpp
include/common/models/: color.hpp  colored_text.hpp  fade_data.hpp
include/common/util/: arg_parser.hpp  array_to_vector.hpp  better_canvas.hpp  config_loader.hpp  debug_log.hpp  enum_checked_transformer.hpp  pad_zeros.hpp  shuffle_vector.hpp  split_string.hpp  starts_with.hpp
include/modules/: module.hpp  module_configuration.hpp
include/modules/colors/: circle_animation_renderer.hpp  colors_configuration.hpp  colors_module.hpp  parse_arguments.hpp  pulse_animation_renderer.hpp
include/modules/colors/renderers/: circle_animation_renderer.hpp  corners_animation_renderer.hpp  pulse_animation_renderer.hpp  renderer.hpp
include/modules/game-of-life/: game_of_life_board.hpp  game_of_life_configuration.hpp  game_of_life_module.hpp  parse_arguments.hpp
include/modules/images/: images_configuration.hpp  images_module.hpp
include/modules/time-date/: time_date_configuration.hpp  time_date_module.hpp
res/: image.csv
src/: cli.cpp  main.cpp  manager.cpp
src/common/canvas/: better_canvas.cpp  debug_canvas.cpp  drawLine.cpp  drawLine.hpp  drawText.cpp  drawText.hpp  textDrawer.cpp  textDrawer.hpp  text_drawer.cpp
src/common/models/: color.cpp  color.hpp
src/common/util/: arg_parser.cpp  array_to_vector.cpp  array_to_vector.hpp  better_canvas.cpp  better_canvas_draw_text.cpp  config_loader.cpp  enum_checked_transformer.cpp  padZeros.cpp  padZeros.hpp  pad_zeros.cpp  shuffle_vector.cpp  split_string.cpp  split_string.hpp  starts_with.cpp
src/models/: image.cpp  image.hpp
src/modules/: module.cpp  module_configuration.cpp
src/modules/colors/: circle_animation_renderer.cpp  colors_configuration.cpp  colors_configuration.hpp  colors_module.cpp  corners_animation_renderer.cpp  main.cpp  parse_arguments.cpp  parse_arguments.hpp  pulse_animation_renderer.cpp
src/modules/colors/renderers/: circle_animation_renderer.cpp  corners_animation_renderer.cpp  pulse_animation_renderer.cpp  renderer.cpp
src/modules/game-of-life/: game_of_life_board.cpp  game_of_life_configuration.cpp  game_of_life_configuration.hpp  game_of_life_module.cpp  main.cpp  parse_arguments.cpp  parse_arguments.hpp
src/modules/images/: images_configuration.cpp  images_module.cpp
src/modules/time-date/: main.cpp  time_date_configuration.cpp  time_date_module.cpp
src/util/: hex_to_rgb.cpp  hex_to_rgb.hpp  image_from_csv.cpp  image_from_csv.hpp  read_file.cpp  read_file.hpp
src/visual_modules/: image_visual_module.cpp  image_visual_module.hpp  visual_module.hpp
